--- a/CIDemo/CIDemo/CIDemo.csproj
+++ b/CIDemo/CIDemo/CIDemo.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NSubstitute, Version=1.10.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -50,10 +54,10 @@
     <Compile Include="Models\Circle.cs" />
     <Compile Include="Models\IShapeCalculate.cs" />
     <Compile Include="Models\Rectangle.cs" />
-    <Compile Include="Models\Shape.cs" />
     <Compile Include="Models\Triangle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ShapeCalculateService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
